tests/fail/malformed_expr.rs
fn main() {
    one_assert::assert!(1 ==);
    one_assert::assert!(1 ==, "hi");
    one_assert::assert!(== 1);
    one_assert::assert!(== 1, "hi");
    one_assert::assert!(==);
    one_assert::assert!(==, "hi");
}
